# analizador-pension

./: .gitignore  CLAUDE.md  dev  package.json  pnpm-lock.yaml  pyproject.toml  readme.md  wrangler.jsonc
backend/: main.py  pyproject.toml  readme.md
backend/src/: api.py  app.py  extractor.py
backend/src/components/: dashboard.py  optimizacion.py  proyeccion.py  resumen.py  salarios.py
backend/tests/: test_api.py  test_extractor.py  test_integration.py
backend/tests/fixtures/: create_sample_pdf.py
front/: components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
front/src/: App.tsx  index.css
front/src/components/: pdf-upload-form.tsx
front/src/lib/: constants.ts  normativa.ts
src/: App.tsx  app.py  calculadoras.py  constants.py  extractor.py  index.css  normativa.py
src/components/: ahorro.py  dashboard.py  formulario.py  info-page.tsx  panel_lateral.py  pdf-upload-form.tsx  proyeccion.py  resumen.py  salarios.py  simulador.py  theme-toggle.tsx  timeline.py  transicion.py
src/components/dashboard/: compara-decide.tsx  diagnostico.tsx  index.tsx  law-toggle.tsx  mi-futuro.tsx  situacion-actual.tsx  types.ts
src/components/ui/: select.tsx  term.tsx
src/hooks/: use-theme.ts
src/lib/: calculadoras.ts  calculo-actuarial.ts  constants.ts  dates.ts  diagnostico.ts  normativa.ts  pdf-extractor.ts  rais.ts  regularizacion.ts
src/lib/__tests__/: calculadoras.test.ts  calculo-actuarial.test.ts  (+6 more)
tests/: test_calculadoras.py  test_components.py  test_constants.py  test_e2e.py  test_extractor.py  test_integration.py  test_normativa.py
(+2 files in other folders)
