[project]
name = "pension-analyzer"
version = "0.1.0"
description = "Analizador de Pensión Colombiana — Colpensiones PDF dashboard"
readme = "readme.md"
requires-python = ">=3.13"
dependencies = [
    "dash>=2.18",
    "dash-bootstrap-components>=1.6",
    "plotly>=5.22",
    "pandas>=2.2",
    "pymupdf>=1.24",
    "pikepdf>=9.0",
    "openpyxl>=3.1",
    "rich>=13.0",
]

[dependency-groups]
dev = [
    "multiprocess>=0.70.19",
    "psutil>=7.2.2",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-playwright>=0.7.2",
    "ruff>=0.9",
    "selenium>=4.41.0",
    "ty>=0.0.1a8",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
