[project]
name = "pension-analyzer"
version = "0.2.0"
description = "Analizador de Pensión Colombiana — FastAPI backend"
readme = "readme.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "python-multipart>=0.0.18",
    "pandas>=2.2",
    "pymupdf>=1.24",
    "pikepdf>=9.0",
    "openpyxl>=3.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
